A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)

Bug fixes:
..F....... [ZBXNEXT-1782] fixed trigger expression testing not working incorrectly for some expressions that contain nested parentheses (Pavels)
...G...... [ZBX-8270] fixed disk space reporting for large AIX file systems (>= 16 TB) (Andris)
.......PS. [ZBX-8422] removed php mutex locking from server code because of not being used and incompatible licensing issues (wiper)
..F....... [ZBX-8377] fixed dark orange theme input fields being displayed light blue, submit button hover not displaying as disabled and made readonly and disabled input fields more readable on all browsers (Ivo)
A......... [ZBX-8332] removed redundant screen import code from 1.8 importer (Krists)
..F....... [ZBX-1215] changed captions of items and periods to be autogenerated by default in barreports (Andrejs)
..F....... [ZBX-8378] fixed bar graphs to automatically resize vertically thus preventing broken charts when captions are very long (Krists)
..F....... [ZBX-8380] fixed disabled confirmation text label in "Administration/Scripts" for IE8 (Krists)
..F....... [ZBX-8370] fixed misc. bugs in barreports (input validation, default captions, caption escaping) (Andrejs)
..F....... [ZBX-8382] fixed trigger severity sound not stopping in user profile form on "Stop" button press (Ivo)
A......... [ZBX-8315] fixed host interface import (from 1.8 and up) to correctly create new or reuse existing interfaces (Krists)
...G...... [ZBX-8248] fixed vfs.file.regexp, vfs.file.regmatch and web.page.regexp to handle carriage returns properly (Juris)
..F....... [ZBX-7459] fixed saving and editing of regular expression having trailing, leading, or repeating spaces (Andrejs)