@@ -955,32 +955,47 @@ function sendAjaxData(options) {
  */
 function createPlaceholders() {
 	if (IE) {
-		jQuery('[placeholder]')
-			.focus(function() {
-				var obj = jQuery(this);
+		jQuery('[placeholder]').each(function() {
+			var placeholder = jQuery(this);
 
-				if (obj.val() == obj.attr('placeholder')) {
-					obj.val('');
-					obj.removeClass('placeholder');
-				}
-			})
-			.blur(function() {
-				var obj = jQuery(this);
+			if (!placeholder.data('has-placeholder-handlers')) {
+				placeholder
+					.data('has-placeholder-handlers', true)
+					.focus(function() {
+						var obj = jQuery(this);
 
-				if (obj.val() == '' || obj.val() == obj.attr('placeholder')) {
-					obj.val(obj.attr('placeholder'));
-					obj.addClass('placeholder');
-				}
-			})
-			.blur();
+						if (!obj.attr('placeholder')) {
+							return;
+						}
 
-		jQuery('form').submit(function() {
-			jQuery('.placeholder').each(function() {
-				var obj = jQuery(this);
+						if (obj.val() == obj.attr('placeholder')) {
+							obj.val('');
+							obj.removeClass('placeholder');
+						}
+					})
+					.blur(function() {
+						var obj = jQuery(this);
 
-				if (obj.val() == obj.attr('placeholder')) {
-					obj.val('');
-				}
+						if (!obj.attr('placeholder')) {
+							return;
+						}
+
+						if (obj.val() == '' ||  obj.val() == obj.attr('placeholder')) {
+							obj.val(obj.attr('placeholder'));
+							obj.addClass('placeholder');
+						}
+					})
+					.blur();
+			}
+
+			jQuery('form').submit(function() {
+				jQuery('.placeholder').each(function() {
+					var obj = jQuery(this);
+
+					if (obj.val() == obj.attr('placeholder')) {
+						obj.val('');
+					}
+				});
 			});
 		});
 	}
