@@ -216,7 +216,7 @@ jQuery(function($) {
 					isWaiting: false,
 					isAjaxLoaded: true,
 					isMoreMatchesFound: false,
-					isAvailableOpenned: false,
+					isAvailableOpened: false,
 					selected: {},
 					available: {},
 					ignored: empty(options.ignored) ? {} : options.ignored
@@ -446,17 +446,17 @@ jQuery(function($) {
 				})
 				.append($('<ul>'))
 				.mouseenter(function() {
-					values.isAvailableOpenned = true;
+					values.isAvailableOpened = true;
 				})
 				.mouseleave(function() {
-					values.isAvailableOpenned = false;
+					values.isAvailableOpened = false;
 				});
 
 				// multi select
 				obj.append(available)
 				.focusout(function() {
 					setTimeout(function() {
-						if (!values.isAvailableOpenned && $('.available', obj).is(':visible')) {
+						if (!values.isAvailableOpened && $('.available', obj).is(':visible')) {
 							hideAvailable(obj);
 						}
 					}, 200);
@@ -885,14 +885,18 @@ jQuery(function($) {
 		}
 
 		if (IE) {
-			$('input[type="text"]', obj).css({
+			var input = $('input[type="text"]', obj);
+
+			input.css({
 				'padding-top': top,
 				'padding-left': left
 			});
 
-			// IE8 hack to fix inline-block container resizing
+			// IE8 hack to fix inline-block container resizing and poke input element value to trigger reflow
 			if (IE8) {
 				$('.multiselect-wrapper').addClass('ie8fix-inline').removeClass('ie8fix-inline');
+				var currentInputVal = input.val();
+				input.val(' ').val(currentInputVal);
 			}
 		}
 		else {
@@ -996,7 +1000,10 @@ jQuery(function($) {
 	}
 
 	function removePlaceholder(obj) {
-		$('input[type="text"]', obj).removeAttr('placeholder');
+		$('input[type="text"]', obj)
+			.removeAttr('placeholder')
+			.removeClass('placeholder')
+			.val('');
 	}
 
 	function getLimit(values, options) {
