@@ -522,6 +522,12 @@ table.suggest tr td { text-align: left; padding-left: 4px; line-height: 2.2em; f
 	margin: 0 0 0 4px; padding: 2px 0 0 4px; top: 0; left: 0; min-height: 14px; position: absolute; z-index: 10;
 	background: none; border: none; outline: none;
 }
+
+/* IE10+ "clear field" X button removing */
+.multiselect input[type="text"]::-ms-clear {
+	display: none;
+}
+
 .multiselect .selected ul {
 	padding: 0 0 0 1px; margin: 0; min-height: 18px;
 	background: #ffffff; border: 1px solid #AAAAAA;
